Prepare code for better Java 9 compatibility